# LINETransfer

./: .gitignore  README.md  convert.py  gdrive.py  ios.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/: config.py  convert.py  gdrive.py  ios.py  main.py
src/sparserestore/: __init__.py
