[project]
name = "linetransfer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "AvianJay", email = "avianjayusb@gmail.com" }
]
dependencies = [
  "google-api-python-client==2.159.0",
  "oauth2client==4.1.3",
  "pymobiledevice3",
  "pyiosbackup",
  "selenium~=4.34.0",
  "flet[all]==0.27.6",
  "webdriver-manager",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "tw.avianjay"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "LINETransfer"

# company name to display in about app dialogs
company = "AvianJay"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by AvianJay"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}